# PBookQMLTest

./: .gitignore  CMakeLists.txt
libbarch/: CMakeLists.txt  barch_header.h  libbarch.cpp  libbarch_chunksize.h  vector_to_bitmask.cpp  vector_to_bitmask.h
libbarch/include/: libbarch.h
libbarchtest/: CMakeLists.txt  QC_ErrorDialog.qml  QC_FileItemView.qml  QC_FileSelectedItemView.qml  QC_FileView.qml  QFileListData.cpp  QFileListData.h  QFileListDataItem.cpp  QFileListDataItem.h  QFileListDataItemBarch.cpp  QFileListDataItemBarch.h  QFileListDataItemI.cpp  QFileListDataItemI.h  QFileListDataItemImg.cpp  QFileListDataItemImg.h  main.cpp  main.qml  qml.qrc
